# profasta

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: code_snippets.ipynb  custom_header_format.fasta  custom_header_format.uniprot-like.fasta  uniprot_hsapiens_10entries_DECOY.fasta
profasta/: __init__.py  db.py  decoy.py  io.py  parser.py  protein_sequence.py
tests/integration/: test_integration.py  uniprot_hsapiens_10entries.fasta
tests/unit/: test_db.py  test_decoy.py  test_io.py  test_parser.py  test_protein_sequence.py
