[project]
name = "profasta"
description = "A Python library for working with protein containing FASTA files."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "David M. Hollenstein", email = "hollenstein.david@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["fasta", "bioinformatics", "mass spectrometry", "proteomics"]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["profasta"]

[tool.setuptools.dynamic]
version = { attr = "profasta.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
